--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 ofxWorkQueues - OpenFramworks Addon
-The idea behind this is to easily distribute "splittable" work on as many threads as you need. Useful on those fancy multi-core computer you can get nowadays.
+The idea behind this is to easily distribute "splittable" work on as many threads as you need, being able to gather the results from the main thread when ready. Useful on those fancy multi-core computers you can get nowadays.
